--- a/userChrome.css
+++ b/userChrome.css
@@ -1,6 +1,5 @@
-@import url(firefox-csshacks/chrome/hide_tabs_toolbar.css);
-@import url(firefox-csshacks/chrome/window_control_placeholder_support.css);
 @import url(firefox-csshacks/chrome/urlbar_centered_text.css);
+@import url(mods/hide_tabs_bar.css);
 
 /* Hide header above sidebar */
 #sidebar-header {
@@ -30,11 +29,6 @@
 }
 #PanelUI-menu-button {
   padding: 0px !important;
-}
-
-/* Add right padding to window buttons */
-#toolbar-menubar {
-  padding-right: 6px !important;
 }
 
 /* Hide bottom border below urlbar */
